# cai-coder

./: .dockerignore  .env.example  .example.env  .gitignore  AGENTS.md  Dockerfile  README-zh.md  README.md  README_DOCKER.md  demo_http_tool.py  docker-build.sh  docker-compose.yaml  docker-compose.yml  mcp.json  pyproject.toml  pytest.ini  requirements.txt
agent/: cli.py  main.py  prompt.py  server.py  webapp.py
agent/bus/: bus.py  events.py
agent/cron/: __init__.py  service.py
agent/heartbeat/: heatbeat.py
agent/integration/: base.py  manager.py  register.py
agent/intergration/: sandbox.py
agent/middleware/: __init__.py  skill_middleware.py
agent/session/: __init__.py  manager.py
agent/subagents/: __init__.py  service.py
agent/templates/: HEARTBEAT.md
agent/tools/: __init__.py  bash.py  crontool.py  get_weather.py  http_request.py  ls.py  read_file.py  restart_service.py  write_file.py
agent/utils/: common_util.py  logger.py  mcp_util.py  skill.py
app/snake-game/: index.html
feishu-bot/: .env.example  .gitignore  Dockerfile  README.md  bot.py  bot_sse.py  client.py  config.py  docker-compose.yml  event_subscription.py  requirements.txt  start.sh  start_sse.sh
feishubot/: .env.example  README.md  __init__.py  bot.py  client.py  config.py  requirements.txt
tests/: test_agent.py  test_agent_generate_code.py  test_agent_loop.py  test_agent_mcp.py  test_agents_md.py  test_cron.py  test_feishu_channel.py  test_heartbeat.py  test_http_request.py  test_session_manager.py  test_skills_loader.py  test_tools.py  test_utils_config.py  test_web_api.py
(+7 files in other folders)
