[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cai-coder"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.9",
    "langgraph>=1.0.8",
    "langchain-openai==1.1.10",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-env==1.6.0",
    "python-dotenv==1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "app"]

[tool.pytest.ini_options]
pythonpath = "."
env_files = ".local.env"
testpaths = ["tests"]
