[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cai-coder"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.9",
    "langgraph>=1.0.8",
    "langchain-openai==1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-mcp-adapters>=0.2.0",
    "opensandbox-code-interpreter>=0.1.2",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-env==1.6.0",
    "pytest-asyncio>=1.2.0",
    "python-dotenv==1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "app"]

[tool.pytest.ini_options]
pythonpath = "."
env_files = ".local.env"
testpaths = ["tests"]
asyncio_mode = "auto"
